adicionando mais um gênero musical

--- a/templates/index.html
+++ b/templates/index.html
@@ -45,7 +45,7 @@
 </head>
 <body>
     <div id="main" class="container position-absolute top-50 start-50 translate-middle h-auto">
-        <h1 class="h1 text-center mb-4">Diferrent Song Everyday</h1>
+        <h1 class="h1 text-center mb-4">Differrent Song Everyday</h1>
         <h2 class="h2 text-center">ESCOLHA UM GÊNERO MUSICAL E APROVEITE</h2>
         <div id="form" class="container p-4 h-100">
                 <div class="container">
