--- a/templates/index.html
+++ b/templates/index.html
@@ -60,11 +60,11 @@
         </div>
     </div>
 
-    <div class="container">
+    <!--div class="container">
         {% if data_e_hora_atual %}
             <h2 class="h2">{{data_e_hora_atual}}</h2>
         {% endif %}
-    </div>
+    </div!-->
 
     <footer class="footer mt-auto py-3 text-center">
         <p class="text-center" style="color: white;">© 2024 Felipe Rossi</p>
