--- a/static/style.css
+++ b/static/style.css
@@ -1,16 +1,16 @@
 html,body{
-    background-image: url("../static/imagens/background_edit.jpg");
+    background-image: url("../static/imagens/background_edit.jpg"); 
     background-repeat: no-repeat;
     background-size: cover;
     background-attachment: fixed; 
-    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
-    color: white;
+    background-position: center;
     height: 100%;
     margin: 0;
     padding: 0;
     display: flex;
     flex-direction: column;
-    background-position: center;
+    font-family: 'Poppins', sans-serif;
+    color: white;
 }
 
 .footer {
@@ -29,12 +29,16 @@ html,body{
 
 #titulos{
    animation: fadeIn 2s ease; 
+   margin-top: 100px;
 }
 
 #form{
     animation: fadeIn 3s ease;
-    background: rgba(255, 255, 255, 0.05);
-    border-radius: 5px;
+    background-color: rgba(0, 0, 0, 0.6); /* fundo preto com transparência */
+    padding: 30px;
+    border-radius: 12px;
+    color: white;
+    backdrop-filter: blur(4px);
 }
 
 a:hover {
@@ -51,7 +55,6 @@ a:hover {
     border-radius: 50%;
     animation: spin 1s linear infinite;
 }
-
 
 @keyframes fadeIn {
   from {opacity: 0; transform: translateY(20px);}
