--- a/templates/bloqueado.html
+++ b/templates/bloqueado.html
@@ -13,11 +13,38 @@
    
 </head>
 <body class="h-auto d-flex flex-column min-vh-100">
+
+    <nav class="navbar navbar-dark fixed-top">
+        <div class="container-fluid">
+            <img src="\static\imagens\logo2_sem_fundo.png" alt="logo" class="img-fluid" style="height: 90px; width: auto;">
+            <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasDarkNavbar" aria-controls="offcanvasDarkNavbar" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="offcanvas offcanvas-end text-bg-dark" tabindex="-1" id="offcanvasDarkNavbar" aria-labelledby="offcanvasDarkNavbarLabel">
+                <div class="offcanvas-header">
+                    <h5 class="offcanvas-title" id="offcanvasDarkNavbarLabel">Menu</h5>
+                    <button type="button" class="btn-close btn-close-white" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+                </div>
+                <div class="offcanvas-body">
+                    <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
+                    <li class="nav-item">
+                        <a class="nav-link active text-white" aria-current="page" href="/"><i class="fa-solid fa-house"></i>  Home</a>
+                    </li>
+
+                    <li class="nav-item">
+                        <a class="nav-link active text-white" aria-current="page" href="/resultado"><i class="fa-solid fa-square-poll-horizontal"></i>  Resultado</a>
+                    </li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </nav>
+
     <div id="main" class="flex-grow-1 d-flex align-items-center justify-content-center">
         <div class="container">
             <div id="form" class="container p-4 h-100">
                 <div id="videos" class="list-group">
-                    <div id="titulos">
+                    <div class="container">
                         <h1 class="h1 text-center">Você pode realizar uma nova buscar a partir da data</h1>
                         <h2 class="h2 text-center">{{data_e_hora_liberado}}</h2>
                     </div>    
@@ -29,6 +56,8 @@
     <footer class="footer mt-auto py-3 text-center">
         <p class="text-center" style="color: white;">© 2024 Felipe Rossi</p>
     </footer>
-    
+     <!-- <script src="https://accounts.google.com/gsi/client" async defer></script> -->
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js" integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy" crossorigin="anonymous"></script>
 </body>
 </html>
